--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -330,9 +330,9 @@
             $("#chatWindow").toggle();
         });
         /* Handler for Input Text area. Triggered whenever user changes the input text. */
-        $("chatWindowTextArea").bind('keypress keyup keydown blur', function () {
+        $("#chatWindowTextArea").bind('keypress keyup keydown blur', function () {
             debugger;
-            var inputText = $("chatWindowTextArea").text();
+            var inputText = $("#chatWindowTextArea").text();
             veronikaHandler(inputText);
         });
     }
