Commit #60: Update the chat window handler with the Default Agent Handler

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -384,7 +384,9 @@
         $("#chatWindowTextArea").bind('keypress keyup keydown blur', function () {
             debugger;
             var inputText = $("#chatWindowTextArea").val();
-            veronikaHandler(inputText);
+
+            /* Use the default Agent Handler for Chat Conversation */
+            defaultHandler(inputText);
         });
     }
 
