Commit #63: Rename currentDate variable to currentDateValue inside getCurrentDate() method

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -743,9 +743,9 @@
         var current_date = d.getDate();
         var current_month = d.getMonth();
         var current_year = d.getFullYear();
-        var currentDate = (curr_date + " " + MONTH_NAMES[curr_month] + " " + curr_year);
+        var currentDateValue = (curr_date + " " + MONTH_NAMES[curr_month] + " " + curr_year);
 
-        return currentDate;
+        return currentDateValue;
     }
 
 </script>
