--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -735,7 +735,8 @@
     }
 
     /* Get Current Date Formatted in DD MMM YYYY Format */
-    var getCurrentDate = function(){
+    var getCurrentDate = function () {
+        debugger;
 
         var MONTH_NAMES = new Array("Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec");
 
