Commit #65: Add debugger to document.ready function

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -383,6 +383,7 @@
 
     /* Page load handler to initialize data */
     $(document).ready(function () {
+        debugger;
         /* Initialize the Annyang Speech Recognition Library */
         initializeAnnyang();
 
