--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -747,7 +747,7 @@
         var current_date = d.getDate();
         var current_month = d.getMonth();
         var current_year = d.getFullYear();
-        var currentDateValue = (curr_date + " " + MONTH_NAMES[curr_month] + " " + curr_year);
+        var currentDateValue = (current_date + " " + MONTH_NAMES[current_month] + " " + current_year);
 
         return currentDateValue;
     }
