--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -12,6 +12,10 @@
         margin-top: 3px !important;
     }
 
+    #dashboardCurrentDate{
+        font-size: 24px;
+    }
+
     #canvas-wrap {
         position:relative;
         height:500px;
